--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,47 @@ body {
 .app {
   color: rgb(31, 31, 31);
 }
+
+.app__question {
+  padding-left: 5px;
+}
+
+button {
+  font-size: 20px;
+  border-top-style: ridge;
+  border-left-style: ridge;
+  border-top-width: 1px;
+  border-left-width: 1px;
+}
+
+button:hover {
+  color: #ffffff;
+  background: rgb(31, 31, 31);
+}
+
+.active-button {
+  color: #ffffff;
+  background: rgb(31, 31, 31);
+}
+
+select {
+  background: none;
+  font-size: 20px;
+}
+
+.buttons {
+  width: 50%;
+  text-align: center;
+  padding: 5px 5px 5px 5px;
+}
+
+.translated-speech {
+  display: inline-flex;
+  text-align: center;
+  width: 100%;
+}
+
+.speech-list {
+  padding: 10px;
+  width: 50%;
+}
